create done chat socket account to account

--- a/src/index.html
+++ b/src/index.html
@@ -64,6 +64,10 @@
     <script src="assets/js/vectormap-init.js"></script>
     <script src="assets/js/video-player.js"></script>
     <script src="assets/js/world.js"></script>
+    <!--    //thêm cho socket-->
+    <script>
+        let global = window;
+    </script>
 
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
